Correct overflow
overflow hidden is preventing scrolling

--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 
 
 body {
-    height: 100vh;
+    height: 100%;
     margin: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
     font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: column;
